@@ -607,8 +607,8 @@ FUNTAB flist[] = {
   {"XVEXITS", fun_dbwalker, 3, 3, FN_REG | FN_STRIPANSI},
   {"XVPLAYERS", fun_dbwalker, 3, 3, FN_REG | FN_STRIPANSI},
   {"XVTHINGS", fun_dbwalker, 3, 3, FN_REG | FN_STRIPANSI},
-  {"XWHO", fun_xwho, 2, 2, FN_REG | FN_STRIPANSI},
-  {"XWHOID", fun_xwho, 2, 2, FN_REG | FN_STRIPANSI},
+  {"XWHO", fun_xwho, 2, 3, FN_REG | FN_STRIPANSI},
+  {"XWHOID", fun_xwho, 2, 3, FN_REG | FN_STRIPANSI},
   {"ZEMIT", fun_zemit, 2, -2, FN_REG},
   {"ZFUN", fun_zfun, 1, 11, FN_REG},
   {"ZONE", fun_zone, 1, 2, FN_REG | FN_STRIPANSI},
